internal/xds/translator/testdata/out/extension-xds-ir/http-route-extension-translate-error.routes.yaml
- ignorePortInHostMatching: true
  name: extension-post-xdstranslate-hook-error
  virtualHosts:
  - domains:
    - '*'
    name: extension-post-xdstranslate-hook-error/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: fail-close-error/backend/0
        upgradeConfigs:
        - upgradeType: websocket
